--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,15 @@ body.active { overflow-y: hidden; }
 }
 
 
+#Prize-image {
+  padding-top: 20px;
+}
+
+.Prize-title {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: var(--fs-3);
+  margin-bottom: 20px;
+}
 
 
 
@@ -538,8 +547,8 @@ body.active { overflow-y: hidden; }
   color: var(--raisin-black-1);
   font-family: var(--ff-oswald);
   font-size: var(--fs-4);
-  padding: 8px 42px;
-  border-radius: 50px;
+  padding: 6px 42px;
+  border-radius: 20px;
 }
 
 .tournament-prize img { margin-inline: auto; }
